--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,7 @@
 		#todo-form 	 			{ margin-bottom:50px; }
 	</style>
 
-	<!-- SPELLS -->
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script><!-- load angular -->
-
-	<script src="js/controllers/main.js"></script> <!-- load up our controller -->
-	<script src="js/services/todos.js"></script> <!-- load our todo service -->
-	<script src="js/core.js"></script> <!-- load our main application -->
+	<script type="text/javascript" data-main="js/core.js" src="jslibs/require.js"></script>
 
 </head>
 <!-- SET THE CONTROLLER -->
