--- a/public/index.html
+++ b/public/index.html
@@ -145,6 +145,8 @@
 			</div>
 		</div>
 
+		<hello-angular2></hello-angular2>
+
 		<div class="text-center text-muted">
 			<p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
 			<p>Read the <a href="http://scotch.io/tutorials/javascript/creating-a-single-page-todo-app-with-node-and-angular">tutorial</a>.</p>
