--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,10 @@
 
 	<!--<script src="jslibs/es6-shim/es6-shim.js"></script>
 	<script src="jslibs/reflect-metadata/Reflect.js"></script>-->
-	<script type="text/javascript" src="jslibs/require.js"></script>
-	<script type="text/javascript" src="jslibs/system.js"></script>
+	<!--<script type="text/javascript" src="jslibs/require.js"></script>
+	<script type="text/javascript" src="jslibs/system.js"></script>-->
 
-	<script type="text/javascript">
-		window.define = SystemJS.amdDefine;
-		window.require = window.requirejs = SystemJS.amdRequire;		
-	</script>
+	
 
 </head>
 <!-- SET THE CONTROLLER -->
@@ -87,7 +84,14 @@
 		</div>
 
 	</div>
-	<script src="system.config.js"></script>
-	<script src="system.import.js"></script>
+	<!--<script type="text/javascript">
+		window.define = SystemJS.amdDefine;
+		window.require = window.requirejs = SystemJS.amdRequire;		
+	</script>
+	<script src="system.config.js" type="text/javascript"></script>
+	<script src="system.import.js" type="text/javascript"></script>-->
+
+	<script src="dist/vendor.es2015.js"></script>
+	<script src="dist/bundle.es2015.js"></script>
 </body>
 </html>
